<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              tools:context="com.example.vedikajadhav.assignment3.dummy.InstructorDetailActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/first_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"/>

        <EditText
            android:id="@+id/first_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:editable="false"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/last_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"/>

        <EditText
            android:id="@+id/last_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:editable="false"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/comments_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/write_comment_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/write_comment_hint"
            android:inputType="text"
            android:imeOptions="actionDone"/>

        <Button
            android:id="@+id/post_comment_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_comment_button_label"
            android:onClick="postComment"/>

        <ListView
            android:id="@+id/comment_list_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"/>


    </LinearLayout>

</LinearLayout>
